--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,9 @@ input[type="number"] {
   flex : 1;
   margin : auto;
 }
+
+.bg-stripes {
+    background-color: #f3f4f6;
+    background-image: linear-gradient(135deg,  #97caa8 25%, transparent 25%, transparent 50%,  #97caa8 50%, #97caa8 75%, transparent 75%, transparent);
+    background-size: 10px 10px;
+}
