--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ input[type="submit"] {
 
 
 input[type="submit"] {
-  background-color: indigo;
+  background-color: #4f46e5;
   color: white;
   border: none;
   cursor: pointer;
@@ -32,7 +32,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: indigo;
+  background-color: #4f46e5;
 }
 
 .styled-button {
@@ -43,7 +43,7 @@ input[type="submit"]:hover {
   border-radius: 8px;
   box-sizing: border-box;
   font-size: 16px;
-  background-color: indigo;
+  background-color: #4f46e5;
   color: white;
   border: none;
   cursor: pointer;
@@ -89,7 +89,7 @@ input[type="number"] {
 }
 
 .styled-button {
-  background-color: indigo;
+  background-color: #4f46e5;
   color: white;
   border: none;
   cursor: pointer;
